# python-sdk-etdi

./: 1  404.html  COMMIT_MESSAGE.md  INTEGRATION_GUIDE.md  PR_DESCRIPTION.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup_etdi.py  sitemap.xml  test_etdi_implementation.py
.github/workflows/: deploy.yml  mkdocs-deploy.yml
api/: index.html  index.md
attack-prevention/: index.html
attack-prevention/rug-poisoning/: index.html
attack-prevention/tool-poisoning/: index.html
deployment/config/: etdi-config.json
deployment/docker/: Dockerfile  docker-compose.yml
docs/: attack-prevention.md  getting-started.md  index.md  security-features.md
docs-hextra/: go.mod  hugo.toml  package.json  setup.sh
docs-hextra/config/_default/: module.toml
docs-hextra/content/: _index.md
docs-hextra/content/api/: _index.md
docs-hextra/content/docs/: _index.md
docs-hextra/content/docs/attack-prevention/: _index.md  rug-poisoning.md  tool-poisoning.md
docs-hextra/content/docs/getting-started/: _index.md
docs-hextra/content/docs/security-features/: _index.md  authentication.md
docs-hextra/content/examples/: _index.md
docs-hextra/layouts/_default/: baseof.html
docs/attack-prevention/: rug-poisoning.md  tool-poisoning.md
docs/examples/: index.md
docs/examples/etdi/: basic_usage.md  call_stack_example.md  caller_callee_authorization_example.md  clean_api_example.md  demo_etdi.md  e2e_secure_client.md  e2e_secure_server.md  index.md  inspector_example.md  legitimate_etdi_server.md  oauth_providers.md  protocol_call_stack_example.md  run_e2e_demo.md  secure_server_example.md  setup_etdi.md  test_complete_security.md  tool_poisoning_demo.md  verify_implementation.md
docs/fastmcp/: index.md
examples/: README.md  index.html
examples/etdi/: .env.example  README.md  TOOL_POISONING_DEMO_README.md  basic_usage.py  call_stack_example.py  caller_callee_authorization_example.py  clean_api_example.py  demo_etdi.py  e2e_secure_client.py  e2e_secure_server.py  index.html  inspector_example.py  legitimate_etdi_server.py  oauth_providers.py  protocol_call_stack_example.py  run_e2e_demo.py  secure_server_example.py  test_complete_security.py
examples/etdi/basic_usage/: index.html
examples/etdi/call_stack_example/: index.html
examples/etdi/caller_callee_authorization_example/: index.html
examples/etdi/clean_api_example/: index.html
examples/etdi/demo_etdi/: index.html
examples/etdi/e2e_secure_client/: index.html
examples/etdi/e2e_secure_server/: index.html
examples/etdi/inspector_example/: index.html
examples/etdi/legitimate_etdi_server/: index.html
examples/etdi/oauth_providers/: index.html
examples/etdi/protocol_call_stack_example/: index.html
examples/etdi/run_e2e_demo/: index.html
examples/etdi/secure_server_example/: index.html
examples/etdi/setup_etdi/: index.html
examples/etdi/test_complete_security/: index.html
examples/etdi/tool_poisoning_demo/: README.md  REAL_SERVER_DEMO_README.md  TOOL_POISONING_DEMO_README.md  etdi_attack_prevention_client.py  index.html  legitimate_etdi_server.py  malicious_server.py  requirements.txt  run_real_server_demo.py
examples/etdi/verify_implementation/: index.html
examples/fastmcp/: etdi_fastmcp_example.py
fastmcp/: index.html
getting-started/: index.html
search/: search_index.json
security-features/: index.html
src/mcp/cli/: cli.py
src/mcp/etdi/: __init__.py  events.py  exceptions.py  types.py
src/mcp/etdi/cli/: __init__.py  etdi_cli.py
src/mcp/etdi/client/: __init__.py  approval_manager.py  etdi_client.py  secure_session.py  verifier.py
src/mcp/etdi/inspector/: __init__.py  call_stack_verifier.py  oauth_validator.py  security_analyzer.py  token_debugger.py
src/mcp/etdi/oauth/: __init__.py  auth0.py  azure.py  base.py  custom.py  manager.py  okta.py
src/mcp/etdi/server/: __init__.py  middleware.py  secure_server.py  token_manager.py  tool_provider.py
src/mcp/server/fastmcp/: server.py
tests/: conftest.py
tests/etdi/: test_etdi_client.py  test_etdi_only.py  test_inspector.py  test_integration.py  test_oauth_providers.py
